force-app/main/default/objects/Staff_Availability__c/Staff_Availability__c.object-meta.xml
<CustomObject>
    <description>Tracks staff availability windows for scheduling peer meetings and IRPs</description>
    <label>Staff Availability</label>
    <nameField>
        <displayFormat>AVL-{0000}</displayFormat>
        <label>Availability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Availability</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>