force-app/main/default/objects/Staff_Availability__c/fields/Availability_Type__c.field-meta.xml
<CustomField>
    <fullName>Availability_Type__c</fullName>
    <description>Type of availability - Working hours, PTO, or Blocked time</description>
    <label>Availability Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working</fullName>
                <default>true</default>
                <label>Working</label>
            </value>
            <value>
                <fullName>PTO</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>