force-app/main/default/objects/Staff_Availability__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>The date of this availability window</description>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>