force-app/main/default/objects/Staff_Availability__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time of the availability window</description>
    <label>End Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>