force-app/main/default/objects/Staff_Availability__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about this availability window</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>