force-app/main/default/objects/Staff_Availability__c/fields/Recurrence_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Pattern__c</fullName>
    <description>Optional recurrence pattern for repeating availability (e.g., weekly working hours)</description>
    <label>Recurrence Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None (One-time)</label>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Weekdays</fullName>
                <label>Weekdays (Mon-Fri)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>