force-app/main/default/objects/Staff_Availability__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The staff member this availability record belongs to</description>
    <label>Staff Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Staff_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>